# PlayerMatching

./: README.md  pyproject.toml  sept2025.xlsx  template.xlsx
source/player_matching/: data_types.py  main.py  matcher.pl  prolog_interface.py  settings.py  xlsx_interface.py
source/tests/: test_player_matching.py
