[tool.poetry]
name = "player-matching"
packages = [{include = "player_matching", from = "source"}]
version = "0.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.black]
line-length = 120

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.mypy]
check_untyped_defs = true
files = ["source/player_matching"]
ignore_missing_imports = true
mypy_path = ["source"]
namespace_packages = true
plugins = ["pydantic.mypy"]
