[tool.poetry]
name = "player-matching"
packages = [{include = "player_matching", from = "source"}]
version = "0.0.1"

[tool.poetry.dependencies]
openpyxl = "^3.1.5"
pyswip = "^0.3.3"
python = "^3.13"
pytest = "^8.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.black]
line-length = 120

[tool.isort]
include_trailing_comma = true
known_first_party = ['player_matching', 'tests']
line_length = 120
multi_line_output = 3

[tool.mypy]
check_untyped_defs = true
files = ["source/player_matching"]
ignore_missing_imports = true
mypy_path = ["source"]
namespace_packages = true
plugins = ["pydantic.mypy"]
